RESOLVED FIXED 275127
[Unified Text Replacement] Context range is sometimes incorrect
https://bugs.webkit.org/show_bug.cgi?id=275127
Summary [Unified Text Replacement] Context range is sometimes incorrect
Richard Robinson
Reported 2024-06-04 14:12:05 PDT
Attachments
Richard Robinson
Comment 1 2024-06-04 14:21:51 PDT
EWS
Comment 2 2024-06-04 15:27:47 PDT
Committed 279719@main (7b3437ee1d1a): <https://commits.webkit.org/279719@main> Reviewed commits have been landed. Closing PR #29517 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.